@@ -1,5 +1,10 @@
 5.2.0:
   * Support for Berkeley DB 5.2.
+  * Support for the newly available replication manager events:
+    DB_EVENT_REP_SITE_ADDED, DB_EVENT_REP_SITE_REMOVED,
+    DB_EVENT_REP_LOCAL_SITE_REMOVED, DB_EVENT_REP_CONNECT_BROKEN,
+    DB_EVENT_REP_CONNECT_ESTD, DB_EVENT_REP_CONNECT_TRY_FAILED,
+    DB_EVENT_REP_INIT_DONE.
 
 5.1.2:
   * 5.1.1 install fails if the bsddb in the standard library is not installed,
